src/components/transactions/TxSummary/styles.module.css
.gridContainer {
  --grid-nonce: minmax(50px, 0.25fr);
  --grid-type: minmax(150px, 3fr);
  --grid-info: minmax(150px, 3fr);
  --grid-date: minmax(200px, 3fr);
  --grid-confirmations: minmax(150px, 1fr);

  --grid-actions: minmax(120px, 1fr);
  --grid-status: minmax(120px, 1fr);

  width: 100%;
  display: grid;
  gap: var(--space-2);
  align-items: center;
  white-space: nowrap;
  grid-template-columns: var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations)
  var(--grid-actions)
  var(
      --grid-status
    );
  grid-template-areas: 'nonce type info date confirmations  status actions';
}

.gridContainer > * {
  max-width: 100%;
}

.gridContainer.history {
  grid-template-columns: var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-status);
  grid-template-areas: 'nonce type info date status';
}

.gridContainer.grouped {
  grid-template-columns: var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations) var(--grid-status);
  grid-template-areas: 'type info date confirmations status actions';
}

.gridContainer.untrusted {
  opacity: 0.4;
}

.gridContainer .status {
  margin-right: var(--space-3);
}

.date {
  color: var(--color-text-secondary);
}

@media (max-width: 1200px) {
  .gridContainer {
    gap: var(--space-1);
    display: flex;
    flex-wrap: wrap;
  }

  .nonce {
    min-width: 30px;
  }

  .date {
    width: 100%;
  }

  .status {
    margin: 0 var(--space-1);
  }
}

